<resources>

    <string name="app_name">BookReader</string>
    <string name="icon"></string>
    <string name="send_bugreport">Send to BugReport(Mail)</string>
    
    <string name="directoy_access_denied">Directory access denied</string>
    
    <string name="bookviewer_fileopenerror">BookViewer File Open Error</string>
    <string name="nextbook_not_found">Next book not found</string>
    <string name="prevbook_not_found">Previous book not found</string>
    <string name="page_seek"></string>
    <string name="back_to_shelf">Back to shelf</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="remove_bookmark">Remove bookmark</string>
    <string name="left_to_right">Left to Right</string>
    <string name="right_to_left">Right to Left</string>
    
    <string name="manage_shelf">Manage shelf</string>
    <string name="add_shelf">Add shelf</string>
    <string name="list_bookmark">Bookmark</string>
    <string name="list_history">History</string>
    
    <string name="open_from_history">Open from history</string>
    <string name="open_from_bookmark">Open from Bookmark</string>

</resources>
