<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    
    <!--
    android:actionViewClass="android.widget.SeekBar"
    -->
    <item
        android:id="@+id/page_seek"
        android:title="@string/page_seek"
        android:showAsAction="always"
        android:actionLayout="@layout/pageseek"
        />
    
    <item
        android:id="@+id/back_to_shelf"
        android:title="@string/back_to_shelf"
        />
    <item
        android:id="@+id/bookmarks"
        android:title="@string/bookmarks"
        />
    <item
        android:id="@+id/add_bookmark"
        android:title="@string/add_bookmark"
        android:visible="false"
        />
    <item
        android:id="@+id/remove_bookmark"
        android:title="@string/remove_bookmark"
        android:visible="false"
        />
    <item
        android:id="@+id/left_to_right"
        android:title="@string/left_to_right"
        />
    <item
        android:id="@+id/right_to_left"
        android:title="@string/right_to_left"
        />

</menu>
